--------------------------------------------------------------------------------------------------
Release notes version 1.7.5 : Enhancements, modifications and corrected bugs since version 1.7.4 :
--------------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------------
Release notes version 1.7.4 : Enhancements, modifications and corrected bugs since version 1.7.3 :
--------------------------------------------------------------------------------------------------
09/12/16 (Tools)   Announcement: New Documentation Reference Guide
25/11/16 (TRUST)   Portability : Update with modifications from TRUST 1.7.4
--------------------------------------------------------------------------------------------------
Release notes version 1.7.3 : Enhancements, modifications and corrected bugs since version 1.7.2 :
--------------------------------------------------------------------------------------------------
03/06/16 (TrioCFD) Optimization: New low-Reybolds turbulence model available
03/06/16 (TrioCFD) New feature : Nonlinear k-epsilon turbulence model added
26/05/16 (TrioCFD) Minor change: New CEG dependency: Critere_Entrainement_Gaz
03/02/16 (TrioCFD) Bug fixed   : Resume a Front-Tracking calculation is now ok
--------------------------------------------------------------------------------------------------
Release notes version 1.7.2 : Enhancements, modifications and corrected bugs since version 1.7.1 :
--------------------------------------------------------------------------------------------------
12/11/15 (TrioCFD) Major change: Disable low Reynolds number turbulence model 
14/10/15 (TrioCFD) Minor change: UtilitairesAssemblages dependency deleted because not used by this baltik
18/06/15 (TrioCFD) Major change: Trio_U code becomes TRUST platform + TrioCFD baltilk